[package]
name = "smsak"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
chrono-tz = "0.8.4"
pretty_env_logger = "0.5.0"
reqwest = { version = "0.11.22", features = ["serde_json", "json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
warp = "0.3.6"
openssl = { version = "0.10", features = ["vendored"] }
